--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,28 +1,27 @@
-pipeline {
-    agent any
-    options {
-        skipStagesAfterUnstable()
-    }
-    stages {
-        stage('Build') {
-            steps {
+node {
+    try {
+        stage('Checkout') {
+            checkout scm
+        }
+
+        // Kita pake image Maven buat nge-build Java
+        // Mirip kayak tadi pake Node image buat React
+        docker.image('maven:3.8.6-openjdk-11-slim').inside {
+            
+            stage('Build') {
+                echo 'Building Java App...'
+                // Perintah Maven buat build jar (-B biar gak cerewet log-nya)
                 sh 'mvn -B -DskipTests clean package'
             }
-        }
-        stage('Test') {
-            steps {
+
+            stage('Test') {
+                echo 'Running Unit Tests...'
+                // Perintah Maven buat test
                 sh 'mvn test'
             }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
-            }
         }
-        stage('Deliver') { 
-            steps {
-                sh './jenkins/scripts/deliver.sh' 
-            }
-        }
+    } catch (e) {
+        currentBuild.result = 'FAILURE'
+        throw e
     }
 }
